--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -8,25 +8,9 @@
   </div>
   <div class="board">
     <div class="board-bar">
-      <p class="board__name">Board Name</p>
+      <app-nav-link></app-nav-link>
     </div>
-    <div class="board-wrapper">
-      <div class="board__columns" cdkDropListGroup>
-        <div class="board__column" *ngFor="let column of board.columns">
-          <div class="column__title">
-            {{column.name}}
-          </div>
-          <div class="tasks-container"
-               cdkDropList
-               [cdkDropListData]="column.tasks"
-               (cdkDropListDropped)="drop($event)">
-            <div class="task" *ngFor="let todo of column.tasks" cdkDrag>
-              {{todo}}
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
+    <router-outlet></router-outlet>
   </div>
 </div>
 
