--- a/src/app/pages/pages.component.scss
+++ b/src/app/pages/pages.component.scss
@@ -2,117 +2,114 @@
   display: flex;
   flex-direction: column;
   height: 100%;
+  ::ng-deep {
 
-}
-
-.app-name {
-  font-size: 28px;
-  font-family: 'Lato', sans-serif;
-  font-weight: bold;
-}
-
-
-.has-gradient {
-  background: linear-gradient(#13f7f4, #2af590);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-}
-
-.task {
-  display: flex;
-  padding: 15px 12px;
-  background: white;
-  border-bottom: solid 1px #ddd;
-  border-radius: 5px;
-  box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.05),
-  0 3px 14px 2px rgba(0, 0, 0, 0.05);
-  margin-bottom: 15px;
-}
-
-.cdk-drag-preview {
-  box-sizing: border-box;
-  border-radius: 4px;
-  box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
-  0 8px 10px 1px rgba(0, 0, 0, 0.14),
-  0 3px 14px 2px rgba(0, 0, 0, 0.12);
-}
-
-.cdk-drag-placeholder {
-  opacity: 0;
-}
-
-.cdk-drag-animating {
-  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
-}
-
-.example-box:last-child {
-  border: none;
-}
-
-.tasks-container.cdk-drop-list-dragging .task:not(.cdk-drag-placeholder) {
-  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
-}
-
-.board {
-  display: flex;
-  flex-direction: column;
-  flex-grow: 1;
-  min-width: 0;
-  min-height: 0;
-
-  .board-bar {
-    background: rgba(gray, 0.5);
-    padding: 8px 15px;
-
-    .board__name {
-      font-size: 20px;
+    .app-name {
+      font-size: 28px;
+      font-family: 'Lato', sans-serif;
       font-weight: bold;
-      color: #fff;
     }
-  }
 
-  .board-wrapper {
-    display: flex;
-    flex-grow: 1;
-    overflow-x: auto;
 
-    .board__columns {
+    .has-gradient {
+      background: linear-gradient(#13f7f4, #2af590);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+    }
+
+    .task {
       display: flex;
+      padding: 15px 12px;
+      background: white;
+      border-bottom: solid 1px #ddd;
+      border-radius: 5px;
+      box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.05),
+      0 3px 14px 2px rgba(0, 0, 0, 0.05);
+      margin-bottom: 15px;
+    }
+
+    .cdk-drag-preview {
+      box-sizing: border-box;
+      border-radius: 4px;
+      box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
+      0 8px 10px 1px rgba(0, 0, 0, 0.14),
+      0 3px 14px 2px rgba(0, 0, 0, 0.12);
+    }
+
+    .cdk-drag-placeholder {
+      opacity: 0;
+    }
+
+    .cdk-drag-animating {
+      transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+    }
+
+    .example-box:last-child {
+      border: none;
+    }
+
+    .tasks-container.cdk-drop-list-dragging .task:not(.cdk-drag-placeholder) {
+      transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+    }
+
+    .board {
+      display: flex;
+      flex-direction: column;
       flex-grow: 1;
+      min-width: 0;
+      min-height: 0;
 
-      .board__column {
-        display: flex;
-        flex-direction: column;
-        background: rgba(white, 0.5);
-        min-width: 300px;
-        margin: 50px;
-        padding: 25px;
-        flex-basis: 0;
-        border-radius: 5px;
-        flex-grow: 1;
+      .board-bar {
+        background: rgba(gray, 0.5);
+        padding: 8px 15px;
 
-        &:not(:first-child) {
-          margin-left: 0;
-        }
-
-        .column__title {
+        .board__name {
           font-size: 20px;
-          font-weight: 600;
-          font-family: 'Lato', sans-serif;
-          text-transform: uppercase;
-          margin-bottom: 20px;
+          font-weight: bold;
+          color: #fff;
         }
+      }
 
-        .tasks-container {
+      .board-wrapper {
+        display: flex;
+        flex-grow: 1;
+        overflow-x: auto;
+
+        .board__columns {
+          display: flex;
           flex-grow: 1;
-          overflow-y: auto;
 
+          .board__column {
+            display: flex;
+            flex-direction: column;
+            background: rgba(white, 0.5);
+            min-width: 300px;
+            margin: 50px;
+            padding: 25px;
+            flex-basis: 0;
+            border-radius: 5px;
+            flex-grow: 1;
+
+            &:not(:first-child) {
+              margin-left: 0;
+            }
+
+            .column__title {
+              font-size: 20px;
+              font-weight: 600;
+              font-family: 'Lato', sans-serif;
+              text-transform: uppercase;
+              margin-bottom: 20px;
+            }
+
+            .tasks-container {
+              flex-grow: 1;
+              overflow-y: auto;
+
+            }
+          }
         }
       }
     }
   }
-
 }
-
-
-
