--- a/src/app/file/file.component.scss
+++ b/src/app/file/file.component.scss
@@ -2,6 +2,22 @@
   .file__container {
     width: 500px;
     border: 4px solid purple;
+    position: relative;
+    .background-text {
+      position: absolute;
+      font-size: 30px;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      text-align: center;
+      line-height: 30px;
+    }
+  }
+  &__item {
+    opacity:0;
+    padding: 5rem;
+    width: auto;
+    height: 5rem;
   }
 
 }
